# internal/api/controller/ticket_controller.go
@@ -27,13 +27,13 @@ func NewTicketController(tr model.TicketRepository) *ticketController {
 //	@Tags			tickets
 //	@Accept			json
 //	@Produce		json
-//	@Param			ticket	body		model.TicketCreateRequest	true	"Ticket"
-//	@Success		201		{object}	string						"Ticket id"
-//	@Failure		400		{object}	model.ErrorResponse			"Bad Request"
-//	@Failure		422		{object}	model.ErrorResponse			"Unprocessable Entity"
+//	@Param			ticket	body		model.TicketCreate	true	"Ticket"
+//	@Success		201		{object}	string				"Ticket id"
+//	@Failure		400		{object}	model.ErrorResponse	"Bad Request"
+//	@Failure		422		{object}	model.ErrorResponse	"Unprocessable Entity"
 //	@Router			/v1/tickets [post]
 func (tc *ticketController) CreateTicket(c *gin.Context) {
-	ticket := model.TicketCreateRequest{}
+	ticket := model.TicketCreate{}
 	if err := c.BindJSON(&ticket); err != nil {
 		c.JSON(http.StatusUnprocessableEntity, model.ErrorResponse{Message: err.Error()})
 		return
@@ -50,6 +50,13 @@ func (tc *ticketController) CreateTicket(c *gin.Context) {
 		return
 	}
 
+	userId, err := c.Cookie("session")
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, model.ErrorResponse{Message: err.Error()})
+		return
+	}
+
+	ticket.UserId = userId
 	ticketId, err := tc.tr.InsertOne(c.Request.Context(), ticket)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, model.ErrorResponse{Message: err.Error()})
@@ -66,9 +73,9 @@ func (tc *ticketController) CreateTicket(c *gin.Context) {
 //	@Tags			tickets
 //	@Accept			json
 //	@Produce		json
-//	@Param			ticketId	path		string					true	"Ticket id"
-//	@Success		200			{object}	model.TicketResponse	"Ticket"
-//	@Failure		404			{object}	string					"Not Found"
+//	@Param			ticketId	path		string			true	"Ticket id"
+//	@Success		200			{object}	model.Ticket	"Ticket"
+//	@Failure		404			{object}	string			"Not Found"
 //	@Router			/v1/tickets/{ticketId} [get]
 func (tc *ticketController) GetTicketById(c *gin.Context) {
 	ticketId := c.Param("ticketId")
@@ -89,9 +96,9 @@ func (tc *ticketController) GetTicketById(c *gin.Context) {
 //	@Tags			tickets
 //	@Accept			json
 //	@Produce		json
-//	@Param			departmentId	path		string					true	"Department id"
-//	@Success		200				{array}		model.TicketResponse	"Tickets"
-//	@Failure		404				{object}	string					"Not Found"
+//	@Param			departmentId	path		string			true	"Department id"
+//	@Success		200				{array}		model.Ticket	"Tickets"
+//	@Failure		404				{object}	string			"Not Found"
 //	@Router			/v1/tickets/department/{departmentId} [get]
 func (tc *ticketController) GetTicketsForDepartment(c *gin.Context) {
 	departmentId := c.Param("departmentId")
@@ -101,7 +108,7 @@ func (tc *ticketController) GetTicketsForDepartment(c *gin.Context) {
 		c.JSON(http.StatusNotFound, model.ErrorResponse{Message: err.Error()})
 		return
 	}
-	logging.Log.Debug(tickets)
+
 	c.JSON(http.StatusOK, tickets)
 }
 
@@ -112,12 +119,15 @@ func (tc *ticketController) GetTicketsForDepartment(c *gin.Context) {
 //	@Tags			tickets
 //	@Accept			json
 //	@Produce		json
-//	@Param			userId	path		string					true	"User id"
-//	@Success		200		{array}		model.TicketResponse	"Tickets"
-//	@Failure		404		{object}	string					"Not Found"
-//	@Router			/v1/tickets/user/{userId} [get]
+//	@Success		200	{array}		model.Ticket	"Tickets"
+//	@Failure		404	{object}	string			"Not Found"
+//	@Router			/v1/tickets/user [get]
 func (tc *ticketController) GetTicketsForUser(c *gin.Context) {
-	userId := c.Param("userId")
+	userId, err := c.Cookie("session")
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, model.ErrorResponse{Message: err.Error()})
+		return
+	}
 
 	tickets, err := tc.tr.FindMany(c.Request.Context(), bson.M{"userId": userId})
 	if err != nil {
