# internal/api/controller/user_controller.go
@@ -3,7 +3,6 @@ package controller
 import (
 	"errors"
 	"more-tech/internal/model"
-	"more-tech/internal/service"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -37,21 +36,26 @@ func (uc *userController) CreateUser(c *gin.Context) {
 	}
 	userData.Password = string(hash)
 
-	accessToken, err := service.CreateAccessToken(userData.Email)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, model.ErrorResponse{Message: err.Error()})
-		return
-	}
+	// accessToken, err := service.CreateAccessToken(userData.Email)
+	// if err != nil {
+	// 	c.JSON(http.StatusInternalServerError, model.ErrorResponse{Message: err.Error()})
+	// 	return
+	// }
 
-	if err := uc.repository.InsertOne(c.Request.Context(), userData); err != nil {
+	_, err = uc.repository.InsertOne(c.Request.Context(), userData)
+	if err != nil {
 		c.JSON(http.StatusBadRequest, model.ErrorResponse{Message: err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusCreated, model.AuthResponse{
-		AccessToken: accessToken,
-		Type:        "bearer",
-	})
+	// c.SetCookie("session", , 60*60*24*400, "/", "localhost", false, true)
+
+	c.Status(http.StatusCreated)
+
+	// c.JSON(http.StatusCreated, model.AuthResponse{
+	// 	AccessToken: accessToken,
+	// 	Type:        "bearer",
+	// })
 }
 
 func (uc *userController) GetUserById(c *gin.Context) {
@@ -83,7 +87,7 @@ func (uc *userController) Login(c *gin.Context) {
 		return
 	}
 
-	user, err := uc.repository.FindOne(c.Request.Context(), bson.M{"email": userData.Email})
+	_, err := uc.repository.FindOne(c.Request.Context(), bson.M{"email": userData.Email})
 	if errors.Is(err, mongo.ErrNoDocuments) {
 		c.JSON(http.StatusNotFound, model.ErrorResponse{Message: "user not found"})
 		return
@@ -92,11 +96,13 @@ func (uc *userController) Login(c *gin.Context) {
 		return
 	}
 
-	accessToken, err := service.AuthenticateUser(userData, user.Password)
-	if err != nil {
-		c.JSON(http.StatusUnauthorized, model.ErrorResponse{Message: err.Error()})
-		return
-	}
+	c.Status(http.StatusOK)
 
-	c.JSON(http.StatusOK, accessToken)
+	// accessToken, err := service.AuthenticateUser(userData, user.Password)
+	// if err != nil {
+	// 	c.JSON(http.StatusUnauthorized, model.ErrorResponse{Message: err.Error()})
+	// 	return
+	// }
+
+	// c.JSON(http.StatusOK, accessToken)
 }
